tests/ui/dropck/dropck-after-failed-type-lowering.stderr
error[E0107]: missing generics for associated type `B::C`
  --> $DIR/dropck-after-failed-type-lowering.rs:10:25
   |
LL |     h: Option<<G as B>::C>,
   |                         ^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/dropck-after-failed-type-lowering.rs:4:10
   |
LL |     type C<'a>;
   |          ^ --
help: add missing lifetime argument
   |
LL |     h: Option<<G as B>::C<'a>>,
   |                          ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
